@@ -9,7 +9,8 @@ depend() {
 start() {
 	local retval=0
 
-	if [[ ! -f /fastboot && -z ${CDBOOT} ]] && ! is_net_fs / ; then
+	if [[ ! -f /fastboot && -z ${CDBOOT} ]] \
+	&& ! is_net_fs / && ! is_union_fs / ; then
 		if touch -c / >& /dev/null ; then
 			ebegin "Remounting root filesystem read-only"
 			mount -n -o remount,ro /
