@@ -18,6 +18,9 @@ setupopts() {
 	elif is_xenU_sys ; then
 		TBLURB="xen"
 		fakeit=1
+	elif [[ -d /proc/vz ]] ; then
+		TBLURB="VZ"
+		fakeit=1
 	elif grep -q ' cobd$' /proc/devices ; then
 		TBLURB="coLinux"
 		fakeit=1
