@@ -829,14 +829,10 @@ if [[ ${SOFTLEVEL} == "reboot" || ${SOFTLEVEL} == "shutdown" ]] ; then
 	# should help speed things up a bit
 	rm -rf $(ls -d1 "${svcdir}/"* 2>/dev/null | \
 	         grep -ve '\(depcache\|deptree\|envcache\)')
-	
-	source /etc/init.d/halt.sh
-	
-	if [[ ${SOFTLEVEL} == "reboot" ]] ; then
-		source /etc/init.d/reboot.sh
-	else
-		source /etc/init.d/shutdown.sh
-	fi
+
+	# Call halt.sh with LC_ALL=C so that bash doesn't load any locales
+	# which could interfere with unmounting /usr
+	LC_ALL=C exec /etc/init.d/halt.sh "${SOFTLEVEL}"
 	
 	# Should never get here
 	exit 0
